--- a/requirements.txt
+++ b/requirements.txt
@@ -142,6 +142,8 @@ jupyterlab-widgets==3.0.9
     # via ipywidgets
 kiwisolver==1.4.5
     # via matplotlib
+lxml==5.1.0
+    # via -r requirements.in
 markupsafe==2.1.3
     # via
     #   jinja2
@@ -181,6 +183,7 @@ numpy==1.26.3
     #   contourpy
     #   matplotlib
     #   pandas
+    #   scipy
 overrides==7.4.0
     # via jupyter-server
 packaging==23.2
@@ -274,6 +277,8 @@ rpds-py==0.17.1
     # via
     #   jsonschema
     #   referencing
+scipy==1.11.4
+    # via -r requirements.in
 send2trash==1.8.2
     # via jupyter-server
 six==1.16.0
